@@ -45,6 +45,9 @@ import java.awt.Toolkit;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+
+import gnu.javax.imageio.bmp.BMPImageReaderSpi;
+import gnu.javax.imageio.bmp.BMPImageWriterSpi;
 import gnu.javax.imageio.gif.GIFImageReaderSpi;
 
 public final class IIORegistry extends ServiceRegistry
@@ -83,6 +86,9 @@ public final class IIORegistry extends ServiceRegistry
 
     // XXX: Register built-in Spis here.
     registerServiceProvider(new GIFImageReaderSpi()); // Register GIF decoder
+    registerServiceProvider(new BMPImageReaderSpi());
+    registerServiceProvider(new BMPImageWriterSpi());
+
     Toolkit toolkit = Toolkit.getDefaultToolkit();
     if (toolkit instanceof ClasspathToolkit)
       ((ClasspathToolkit)toolkit).registerImageIOSpis(this);
